Added a hack monichrome/PiLampHardware.  It required dedicated pins for each row and column.  It's a start.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,16 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(.)
 
 add_executable(PiLights
+        monochrome/DebugMonoLampMatrixHardware.cpp
+        monochrome/DebugMonoLampMatrixHardware.h
         monochrome/MonoLampHardware.cpp
         monochrome/MonoLampHardware.h
         monochrome/MonoLampMatrixHardware.cpp
         monochrome/MonoLampMatrixHardware.h
         monochrome/MonoLampSet.cpp
         monochrome/MonoLampSet.h
+        monochrome/PiLampHardware.cpp
+        monochrome/PiLampHardware.h
         monochrome/SimpleMonoLampSet.cpp
         monochrome/SimpleMonoLampSet.h
         CompositeLampSet.cpp
@@ -28,7 +32,12 @@ add_executable(PiLights
         SimpleLampSet.cpp
         SimpleLampSet.h
         utils/TThread.cpp
-        utils/TThread.h monochrome/DebugMonoLampMatrixHardware.cpp monochrome/DebugMonoLampMatrixHardware.h utils/FixedExecutionTimeCode.cpp utils/FixedExecutionTimeCode.h utils/RunningStat.cpp utils/RunningStat.h)
+        utils/TThread.h
+        utils/FixedExecutionTimeCode.cpp
+        utils/FixedExecutionTimeCode.h
+        utils/RunningStat.cpp
+        utils/RunningStat.h
+        )
 
 find_library(PIGPIOLIB libpigpio.so)
 TARGET_LINK_LIBRARIES(PiLights "${PIGPIOLIB}")
